Updated frontend logic, fixed Electron preload, and added type definitions

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "files": [],
+  "include": ["src"],  // ✅ ADD THIS LINE
   "references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }],
   "compilerOptions": {
     "baseUrl": ".",
